# pixTrail

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  TEAM.md  build_docs.py  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.md  repository-structure.md  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish-to-pypi.yml  update-changelog.yml  update-repo-structure.yml  version-updater.yml
api/: index.html
api/core/: index.html
api/exif/: index.html
api/gpx/: index.html
api/utils/: index.html
architecture/: index.html
cli/: index.html
contributing/: index.html
development/: index.html
development/css-architecture/: index.html
development/module-structure/: index.html
development/testing/: index.html
docs/: api.md  architecture.md  cli.md  contributing.md  faq.md  getting-started.md  index.md  installation.md  troubleshooting.md  usage.md  web-interface.md  web_interface.md
docs/api/: core.md  exif.md  gpx.md  index.md  utils.md
examples/: README.md  example_script.md  example_script.py
faq/: index.html
getting-started/: index.html
installation/: index.html
pixtrail/: __init__.py  __main__.py  cli.py  core.py  exif_reader.py  gpx_generator.py  utils.py
search/: search_index.json
tests/: __init__.py  test_core.py  test_exif_reader.py  test_gpx_generator.py  test_utils.py
troubleshooting/: index.html
tutorials/: index.html
usage/: index.html
visualization/: index.html
web-interface/: index.html
web_interface/: index.html
(+62 files in other folders)
